# GBI_robot_advisor

./: README.md  pyproject.toml
.claude/: CLAUDE.md
app/: config.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: assets.py  gap.py  optimize.py  simulate.py
app/models/: asset.py  gap.py  goal.py  portfolio.py  simulation.py
app/services/: asset_universe.py  duration.py  gap_analyzer.py  optimizer.py  simulator.py  tax.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: index.html
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_services/: test_edge_cases.py  test_gap_analyzer.py  test_optimizer.py  test_simulator.py  test_tax.py
