[project]
name = "gbi-robo-advisor"
version = "0.1.0"
description = "Duration-matching robo-advisor engine for young professionals"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "scipy>=1.14",
    "numpy>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
